frameworks: add persistent notification when USB OTG is connected
Tapping the notification will take the user into Storage settings, and
highlight the 'Unmount' option.

Change-Id: I650f3874a8295b2b8ffdaef78aff4b68e9cd574e
Signed-off-by: Roman Birg <roman@cyngn.com>

Conflicts:
	core/res/res/values/symbols.xml

--- a/core/res/res/values/symbols.xml
+++ b/core/res/res/values/symbols.xml
@@ -2043,6 +2043,7 @@
    <java-symbol type="anim" name="last_app_in" />
    <java-symbol type="anim" name="last_app_out" />
 
-=======
->>>>>>> parent of f02a48c... Use actual storage type of sdcard/usb (1/2).
+  <!-- USB OTG Notification -->
+  <java-symbol type="string" name="usb_storage_notification_manage_message" />
+
 </resources>
