--- a/core/res/res/values/symbols.xml
+++ b/core/res/res/values/symbols.xml
@@ -2068,4 +2068,9 @@
 
   <!-- Proximity check timeout -->
   <java-symbol type="integer" name="config_proximityCheckTimeout" />
+
+  <!-- Last app switch animations -->
+   <java-symbol type="anim" name="last_app_in" />
+   <java-symbol type="anim" name="last_app_out" />
+
 </resources>
